# PaperPulse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.mineru  JOURNAL.md  Makefile  README.md  WORKLOG.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  uvicorn.py
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/agent/: __init__.py
backend/agent/gap_detection/: __init__.py  background_corpus.py  chat_integration.py  co_occurrence.py  explicit_detector.py  false_gap.py  gap_critique.py  gap_diversity.py  gap_nim_store.py  gap_self_consistency.py  gap_similarity.py  gap_specter_store.py  graph.py  hyde.py  novelty.py  orchestrator.py  quality_scorer.py  query_cleaner.py  retrieval.py  router.py  s2_client.py  schemas.py  settings.py  source_resolution.py  streaming.py
backend/api/: __init__.py  admin.py  auth.py  chat.py  community.py  memory.py  notifications.py  reviews.py  topics.py
backend/auth/: __init__.py  dependencies.py
backend/module/gap_detection/: __init__.py  background_corpus.py  chat_integration.py  co_occurrence.py  explicit_detector.py  false_gap.py  gap_critique.py  gap_diversity.py  gap_self_consistency.py  gap_similarity.py  graph.py  hyde.py  intent_classifier.py  novelty.py  orchestrator.py  quality_scorer.py  retrieval.py  router.py  settings.py  source_resolution.py  streaming.py
backend/module/payment/: pricing.py  schemas.py
backend/module/pdf_agent/: __init__.py
backend/shared/models/: __init__.py  claim.py  graph.py  paper.py  review.py
backend/shared/services/: arxiv_fetcher.py  chat_persistence.py  citation_verifier.py  custom_instructions.py  latex_render.py  latex_utils.py  llm_client.py  nim_config.py  s2_rate_limiter.py  (+4 more)
docs/architecture/: architecture_diagram.md  chat-history-topic-monitoring-blueprint.md  research-gaps-architecture.md
docs/completion_reports/: ESCALATION-ClassA-Bug-BlockingMVP.md  ESCALATION-GapSection-UX-Gate.md  HOTFIX-GapButton-SyntaxError.md  TIP-403_completion_report.md  TIP-405_SCAN_REPORT.md  TIP-407_bug_p4_04_investigation.md  TIP-407_completion_report.md  TIP-407_real_e2e_smoke_verify.md  TIP-411b_completion_report.md  TIP-415_completion_report.md  TIP-417_completion_report.md  TIP-G01_completion_report.md  TIP-G02_completion_report.md  TIP-G03_completion_report.md  TIP-G04_completion_report.md  TIP-G05_completion_report.md  TIP-G06-R_completion_report.md  TIP-G06_completion_report.md  TIP-G07_completion_report.md  TIP-G08_verification_report.md  TIP-G09-R_completion_report.md  TIP-G09_completion_report.md  TIP-G10_completion_report.md  TIP-G11_completion_report.md  TIP-G12_completion_report.md  TIP-GIT-STEP0_completion_report.md  TIP-P2-00_completion_report.md  TIP-P2-01_report.md  TIP-P2-02_report.md  TIP-P2-04_report.md  TIP-P2-05_report.md  TIP-P2-06_report.md  TIP-P2-SCAN-001_report.md  TIP-regression-test_gap_p3_15.md
docs/guide/: chapter-02.md
docs/plan/: token.html
docs/research/: PLAN_1.0.1.md  SPEC_1.0.1.md  review-litureature_SPEC_1.0.1.md
eval/results/: eval_metrics_report.md
frontend/: .env.example  .prettierrc  index.html  package.json  vite.config.js  wrangler.jsonc
frontend/src/: index.css  main.jsx
scripts/: log_antigravity.py  log_hook.py  log_manual.py  setup_hooks.ps1
supabase/: insert.sql  reset.sql  schema.sql
tests/: conftest.py  test_extractor_node.py  test_gap_chat_integration.py  test_gap_co_occurrence.py  test_gap_detection_schemas.py  test_gap_e2e.py  test_gap_endpoint.py  test_gap_guardrail.py  test_gap_hyde_specter.py  test_gap_nim_store_fix.py  test_gap_p2_07.py  test_gap_p2_08.py  test_gap_p3_05.py  test_gap_p3_07.py  test_gap_p3_10.py  test_gap_p3_15.py  test_gap_p4_03.py  test_gap_p4_04.py  test_gap_p4_05.py  test_gap_p4_09.py  test_gap_p4_14.py  test_gap_query_analyzer.py  test_gap_retrieval_clean.py  test_gap_streaming.py  test_gap_verifier_atomic.py  test_pdf_extraction.py  test_uf06_statement_normalization.py
tests/test_api/: test_chat_persistence.py  test_notification_delivery.py  test_notification_settings_api.py  test_notifications_api.py  test_research_stream_persistence.py  test_routes.py  test_topic_auto_watch.py  test_topic_controls_api.py  test_topic_interest_scoring.py  test_topic_monitor_worker.py  test_topic_monitoring_schema.py
tests/test_liturature-review/: PaperPulse_Postman_Collection.json  eval_evidences.md
tests/test_research_gap/: phase5_clean_eval_report.md  phase5_clean_eval_results.json  phase5_clean_topics.json  run_eval.py  run_phase5_clean_eval.py  structural_checks.py  test_structural_checks.py  topics.json
(+233 files in other folders)
